  zoneinfo files produced by zic and included with many Linux and Unix
  distributions.
* Remove the definition and index Ruby modules from TZInfo and move them into
  a separate TZInfo Data library (available as the tzinfo-data gem).
* Default to using the TZInfo Data library as the data source if it is 
  installed, otherwise use zoneinfo files instead.
* Put the full path to the TZInfo lib directory on the search path when
  requiring 'tzinfo' instead of a relative path.

From the 0.3 branch:

* Support the use of '-' to denote '0' as an offset. Used for the first time
  in the SAVE field in tzdata v2009u.
* Change invalid timezone check to exclude characters not used in timezone
  identifiers and avoid 'character class has duplicated range' warnings with
  Ruby 1.9.2.
* Ruby 1.9.2 has deprecated "require 'rational'", but older versions of
  Ruby need rational to be required. Require rational only when the Rational
  module has not already been loaded.
* Remove circular requires (now a warning in Ruby 1.9.2). Instead of using
  requires in each file for dependencies, tzinfo.rb now requires all tzinfo
  files. If you were previously requiring files within the tzinfo directory
  (e.g. require 'tzinfo/timezone'), then you will now have to
  require 'tzinfo' instead.
* Added a description to the gem spec.
* List test files in test_files instead of files in the gem spec.
* Include current directory in load path to allow running tests on
  Ruby 1.9.2, which doesn't include it by default any more.
* Untaint the timezone module filename after validation to allow use
  with $SAFE == 1 (e.g. under mod_ruby). Thanks to Dmitry Borodaenko for
  the suggestion. Closes #25349.
* Support Ruby trunk revision 31668 and later, which removed the 
  DateTime.new! method. Make RubyCoreSupport.datetime_new! fallback to
  DateTime.jd instead. Thanks to Aaron Patterson for reporting the removal of
  the new! method (issue #29233).